Closed Bug 1665322 Opened 5 years ago Closed 5 years ago

Error page loads should add entries for the original load with session history in the parent

Categories

(Core :: DOM: Navigation, defect, P2)

defect

Tracking

()

RESOLVED FIXED
82 Branch
Fission Milestone M6b
Tracking Status
firefox82 --- fixed

People

(Reporter: peterv, Assigned: peterv)

References

Details

(Whiteboard: patch in draft mode)

Attachments

(1 file)

This is the cause of a number of test failures. We add the entry for the error page, not the entry for the original load to session history.

Assignee: nobody → peterv
Severity: -- → S3
Status: NEW → ASSIGNED
Fission Milestone: --- → M6b
Priority: -- → P2
Whiteboard: patch in draft mode
Attachment #9176026 - Attachment description: Bug 1665322 - Error page loads should add entries for the original load with session history in the parent. → Bug 1665322 - Error page loads should add entries for the original load with session history in the parent. r?smaug!
Pushed by pvanderbeken@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/c61159604a85 Error page loads should add entries for the original load with session history in the parent. r=smaug
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: