Bug 1665322 - Error page loads should add entries for the original load with session history in the parent. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D90393